--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,20 +1,21 @@
+
 body {
   background-color: $color-primary;
-  overflow-y: scroll;
   font-family: 'Lato', sans-serif;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   height: 100vh;
+  border: 2px solid red;
+  
 }
 
 main {
   margin: 0 auto;
-  max-width: 1500px;
   width: 100%;
   height: 100vh;
   position: relative;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .pomo-logo {
@@ -229,9 +230,9 @@ main {
 .hero-section {
   width: 100%;
   height: calc(50rem + 4vw);
-  max-height: 55rem;
-  min-height: 55rem;
-  border: 4px solid gray;
+  max-height: 50rem;
+  min-height: 50rem;
+  // border: 4px solid gray;
   margin-top: 6rem;
 }
 
@@ -414,39 +415,39 @@ footer {
 //   }
 // }
 
-// @media (max-width: 600px) {
-//   .sidebar {
-//     padding: 0 1rem;
-//     width: 100%;
-//   }
+@media (max-width: 600px) {
+  .sidebar {
+    padding: 0 1rem;
+    width: 100%;
+  }
 
-//   .hero-section {
-//     max-height: 48rem;
-//     min-height: 48rem;
-//   }
+  .hero-section {
+    max-height: 40rem;
+    min-height: 40rem;
+  }
 
-//   .timer__notice {
-//     margin-top: 4rem;
-//     width: 90%;
-//   }
+  .timer__notice {
+    margin-top: 4rem;
+    width: 90%;
+  }
 
-//   .timer__controls {
-//     gap: 1.3rem;
+  .timer__controls {
+    gap: 1.3rem;
 
-//     .controls-icon {
-//       min-height: 1.3rem;
-//       min-width: 1.3rem;
-//     }
-//   }
+    .controls-icon {
+      min-height: 1.3rem;
+      min-width: 1.3rem;
+    }
+  }
 
-//   .option-menu {
-//     width: 96%;
+  .option-menu {
+    width: 96%;
 
-//     .option {
-//       padding: 0.4rem 0;
-//     }
-//   }
-// }
+    .option {
+      padding: 0.4rem 0;
+    }
+  }
+}
 
 // @media (max-width: 360px) {
 //   body {
